Added style to the page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html> 
 <head>
+<link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-	<img src="mushroom.png">
+	<div id="container"> 
+	<img src="mushroom.png" id="mushroom">
 	<h1> Coming soon </h1> 
-	<h2> Oh Yeah </h2>
+	</div>
 </body>
 </html>
